[package]
name = "check-collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
borsh = "0.9.3"
futures = "0.3.21"
metaboss_lib = "0.0.2"
# mpl-token-metadata = "1.2.7"
mpl-token-metadata = { path = "../metaplex-program-library/token-metadata/program" }
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
solana-client = "1.9.17"
solana-sdk = "1.9.17"
tokio = "1.18.0"
